[gd_scene load_steps=2 format=3 uid="uid://bl8xglt0dn5jt"]

[ext_resource type="Script" path="res://addons/EffectInspector/effect_editor.gd" id="1_37ku4"]

[node name="EffectEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37ku4")

[node name="GlobalContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpinBox" type="SpinBox" parent="GlobalContainer"]
layout_mode = 2
size_flags_vertical = 0
max_value = 0.0

[node name="EffectContainer" type="ItemList" parent="GlobalContainer"]
layout_mode = 2

[connection signal="value_changed" from="GlobalContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
